--- a/12_Shop_MultiProduct/html/css/style.css
+++ b/12_Shop_MultiProduct/html/css/style.css
@@ -510,3 +510,106 @@ footer .main-bottom-footer .copyright a:hover { color: #fff; }
   footer .right-newsletter .main-footer-form { position: relative; }
   footer .right-newsletter .main-footer-form .txt-form { width: 100%; padding-right: 110px; }
   footer .right-newsletter .main-footer-form .button { position: absolute; right: 0; top: 0; } }
+/*CONTACT FORM*/
+.contact-area .section-bg {
+    background-image: url(//cdn.anpero.com/images/38/82019/12019080101554755.jpg);
+}
+
+.section-bg {
+    background-attachment: fixed;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+    .section-bg:after {
+        background-color: #000;
+        content: "";
+        height: 100%;
+        left: 0;
+        opacity: 0.4;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        z-index: -1;
+    }
+.contact-area {
+    position: relative;
+}
+
+.contact-area .section-bg::after {
+    background-color: rgb(24, 89, 142);
+}
+
+    .contact-area .page-title {
+        color: #ffffff;
+        margin-bottom: 60px;
+        text-align: center;
+
+    }
+
+.page-title {
+    margin-bottom: 60px;
+    text-align: center;
+}
+
+.contact-area .page-title h2 {
+    color: #ffffff;
+    font-size: 32px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-top: 0px;
+    padding: 14px 25px;
+    margin: 0px;
+    display: inline-block;
+    border: #fff double;
+    margin-top: 5px;
+}
+
+
+.contact-area input.form-control {
+    height: 45px;
+}
+
+.contact-area input, .contact-area textarea {
+    margin-bottom: 15px;
+    border: 1px solid #ffffff;
+}
+
+.contact-area .battn {
+    background-color: #ffffff;
+    border: medium none;
+    color: #64be43;
+    min-width: 200px;
+}
+
+.battn {
+    background-color: #64BE43;
+    border: 1px solid #64BE43;
+    border-radius: 1px;
+    color: #ffffff;
+    display: inline-block;
+    letter-spacing: 1.2px;
+    margin: 0 5px;
+    padding: 12px 30px;
+    text-transform: uppercase;
+    border-radius: 2px;
+    transition: 0.3s;
+    border-radius: 2px;
+    letter-spacing: 1.2px;
+}
+.mb-25 {
+    margin-bottom: 25px;
+}
+/*END CONTACT FORM*/
+@media (min-width: 768px) {
+    .col-sm-offset-2 {
+        margin-left: 16.66666667%;
+    }
+}
