--- a/02_BDS_BatDongSan_MultiLand/assets/css/style.css
+++ b/02_BDS_BatDongSan_MultiLand/assets/css/style.css
@@ -10,7 +10,7 @@ body {
     /*background: url(http://cdn.anpero.com/images/27/12018/cloud-bg2018012314024680.jpg) center center no-repeat;
         background-size: cover;
     background-attachment: fixed;*/
-    background-color: #e9ebee;
+    /*background-color: #e9ebee;*/
 }
 
 body {
