--- a/15_Company_Info/Views/Home/Contact.cshtml
+++ b/15_Company_Info/Views/Home/Contact.cshtml
@@ -12,26 +12,24 @@
     }
 
 }
+    <section id="subheader" data-speed="8" data-type="background" style="background-image: url('https://cdn.anpero.com/images/38/102019/12019102201193291.jpg'); background-position: 50% 0px;">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1>@ViewBag.Title</h1>
+                    <ul class="crumb"><li><a rel="v:url" property="v:title" href="/">Trang chủ</a></li> <b>/</b> <li class="active">@ViewBag.Title</li></ul>
+                </div>
+            </div>
+        </div>
+    </section>
 <div class="columns-container">
     <div class="container" id="columns">
-        <!-- breadcrumb -->
-        <div class="breadcrumb clearfix">
-            <a class="home" href="#/" title="Return to Home">Trang chủ</a>
-            <span class="navigation-pipe">&nbsp;</span>
-            <span class="navigation_page">Liên hệ</span>
-        </div>
-        <!-- ./breadcrumb -->
-        <!-- page heading-->
-        <h2 class="page-heading">
-            <span class="page-heading-title2">Contact Us</span>
-        </h2>
-        <!-- ../page heading-->
         <div id="contact" class="page-content page-contact">
             <div id="message-box-conact"></div>
             <div class="row">
                 <div class="col-sm-6">
                     <h3 class="page-subheading">Gửi tin nhắn cho @commonInfo.Name</h3>
-                    <div class="contact-form-box">                       
+                    <div class="contact-form-box">
                         <div class="form-selector">
                             <label>Tên liên hệ </label>
                             <input type="text" class="form-control input-sm" id="name" />
@@ -51,7 +49,7 @@
                         <div class="form-selector">
                             <label>Tin nhắn (*)</label>
                             <textarea class="form-control input-sm" rows="10" id="message"></textarea>
-                        </div>                        
+                        </div>
                         <div class="form-selector">
                             <div id="g-recaptcha"></div>
                         </div>
@@ -60,32 +58,36 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6" id="contact_form_map">
-                    <h3 class="page-subheading">Thông tin liên hệ @commonInfo.Name</h3>
-                    <p>@commonInfo.Desc</p>
-                    <br />
-                    
-                    <br />
-                    <ul class="store_info">
-                        <li><i class="fa fa-home"></i>@commonInfo.Address</li>
-                        @if (!string.IsNullOrEmpty(commonInfo.HotLine))
-                        {
-                            <li><i class="fa fa-phone"></i><span><a href="tell:@commonInfo.HotLine">@commonInfo.HotLine</a></span></li>
-                        }
-                        @if (!string.IsNullOrEmpty(commonInfo.Skype))
-                        {
-                            <li><i class="fa fa-skype"></i><span> <a href="skype:@commonInfo.Skype"></a>@commonInfo.Skype</span></li>
-                        }
-                        @if (!string.IsNullOrEmpty(commonInfo.Email))
-                        {
-                            <li><i class="fa fa-envelope"></i><span><a href="mailto:@commonInfo.Email">@commonInfo.Email</a></span></li>
-                        }
-                        @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
-                        {
-                            <li><i class="fa fa-facebook"></i><span><a href="@commonInfo.FaceBookLink">@commonInfo.FaceBookLink</a></span></li>
-                        }
-                    </ul>
+                <div class="wpb_column vc_column_container vc_col-sm-4">
+                    <div class="vc_column-inner ">
+                        <div class="wpb_wrapper wow fadeInRight animated" style="visibility: visible; animation-name: fadeInRight; opacity: 0;">
+                            <h3 style=""> THÔNG TIN LIÊN HỆ</h3>
+
+                            <div class="wpb_text_column wpb_content_element ">
+                                <div class="wpb_wrapper">
+                                    <address>
+                                        <div>@commonInfo.Name</div>
+
+                                        <div>@commonInfo.Address</div>
+                                        <div><strong>Phone:</strong><a href="tell:@commonInfo.HotLine">@commonInfo.HotLine</a></div>
+
+                                        <div><strong>Email:</strong><a href="mailto:contact@beehome.vn">contact@beehome.vn</a></div>
+                                        <div><strong>Web:</strong><a href="mailto:@commonInfo.Email">@commonInfo.Email</a></div>
+                                        
+                                        @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
+                                        {
+                                            <div><strong>Web:</strong><a href="@commonInfo.FaceBookLink">@commonInfo.FaceBookLink</a></div>                                            
+                                        }
+                                        <div><strong>Mở cửa</strong>Thứ 2- Thứ 6 08:00 – 18:00</div>
+                                        <div>@commonInfo.Desc</div>
+                                    </address>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+                
             </div>
             <div id='ajax_loader' style="position: fixed; left: 45%; top: 50%; display: none;">
                 <img src="~/assets/images/loading.gif" />
@@ -98,8 +100,7 @@
     <script src="~/Scripts/Bootrap.notify.js"></script>
     <script src="https://www.google.com/recaptcha/api.js"></script>
     <script>
-        var width = $(window).width();
-        $("#ajax_loader").css("left", ((width / 2) - 100) + "px");
+        
         var googleCatcha;
         $(window).load(function () {
             googleCatcha = grecaptcha.render('g-recaptcha', {
