--- a/02_BDS_BatDongSan_MultiLand/Views/Home/Index.cshtml
+++ b/02_BDS_BatDongSan_MultiLand/Views/Home/Index.cshtml
@@ -99,7 +99,7 @@ else
         <div class="page-top">
             <div class="container">
                 <div class="row  page-top-left">
-                    <div class="col-md-6 col-sm-6">
+                    <div class="col-md-9 col-sm-9">
 
                         <h2 class="page-heading">
                             <span class="page-heading-title">Bất động sản mới <img src="/assets/images/new-marker.gif"></span>
@@ -151,7 +151,7 @@ else
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-3 home-article">
+                    @*<div class="col-md-3 col-sm-3 home-article">
 
                         <h2 class="page-heading">
                             <span class="page-heading-title">Tin mới đăng <img src="/assets/images/new-marker.gif"></span>
@@ -171,7 +171,7 @@ else
                                 }
                             }
                         </div>
-                    </div>
+                    </div>*@
                     <div class="col-md-3 col-sm-3 home-article">
 
                         <h2 class="page-heading">
